<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.NewUserPictureFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="3">

            <ImageView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:src="@drawable/dei" />


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ll_list_preview">

                </LinearLayout>


            </ScrollView>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">


            <SurfaceView
                android:id="@+id/camera_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:padding="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textview_new_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="#FFFFFFFF"
                        android:textSize="25sp" />
                    <TextView
                        android:id="@+id/textview_new_user_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFFFF"
                        android:layout_weight="3"
                        android:textSize="25sp" />
                </LinearLayout>


                <ProgressBar
                    android:id="@+id/progressbar_new_user"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"

                    android:progress="50" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">



                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="20dp"
                    android:enabled="false"
                    android:text="@string/cancelar" />

                <Button
                    android:id="@+id/button_finish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="20dp"
                    android:enabled="false"
                    android:text="@string/finalizar"/>
                <Button
                    android:id="@+id/button_capture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/capturar"
                    android:layout_weight="1"
                    android:padding="20dp"
                    android:enabled="true"
                    android:drawableTint="@color/colorPrimary"
                    android:drawableLeft="@drawable/ic_menu_camera"
                    />
            </LinearLayout>




        </RelativeLayout>



    </LinearLayout>
</FrameLayout>